// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon|Knobs All knobs 1`] = `
<div
  style="border: 2px dotted; padding: 8px 22px; border-radius: 8px; border-color: deeppink;"
>
  <h1>
    My name is Jane,
  </h1>
   
  <h3>
    today is January 20, 2017
  </h3>
   
  <p>
    I have a stock of 20 apples, costing $2.25 each.
  </p>
   
  <p>
    Also, I have:
  </p>
   
  <ul>
    <li>
      Laptop
    </li>
    <li>
      Book
    </li>
    <li>
      Whiskey
    </li>
  </ul>
   
  <p>
    Nice to meet you!
  </p>
</div>
`;

exports[`Storyshots Addon|Knobs Simple 1`] = `
<div>
  I am John Doe and I'm 40 years old.
</div>
`;

exports[`Storyshots Addon|Knobs XSS safety 1`] = `
<div>
  &lt;img src=x onerror="alert('XSS Attack')" &gt;
</div>
`;
